Fix steps (from_ball param). take into account personal data special step

--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -508,7 +508,7 @@ background-image: url(https://i1.createsend1.com/ei/j/2D/FF9/768/194359/csfinal/
         <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
          First of all we would like to thank you for your interest to study at Escuela Técnica Superior de
           Ingenieros de Telecomunicación of Universidad Politécnica de Madrid (ETSIT-UPM). We confirm you that we have duly received the e-nomination from your Home University.
-          Congratulation!
+          Congratulations!
         </h2>
         <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
 
