--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -41,7 +41,7 @@
 						<div class="progress-line">
 						</div>
 						<div class="progress-balls">
-						<a href="/student_application_form/personal_data_step" title="Personal Data">
+						<a href="/student_application_form/personal_data_step?from_ball=true" title="Personal Data">
 							<span class='progress-ball done-step'></span>
 						</a>
 						<% final_steps_array = sap.completed_steps_array %>
@@ -165,7 +165,7 @@
 			</div>
 		<% end %>
 		<% if current_user.role == "user" && current_user.progress_status == "in_process" && current_user.percentage_num.to_i == 100 %>
-			<%= button_to "Finish Application", user_finish_application_form_path, data: {confirm: "Are you sure you want to submit your application?" }, :method=> :post, :class => "custom-button primary right", :form_class => "finish_app" %>
+			<%= button_to "Finish Application", user_finish_application_form_path, data: {confirm: "This action will submit your application form and send an email to notify International Office, are you sure?" }, :method=> :post, :class => "custom-button primary right", :form_class => "finish_app" %>
 		<% end %>
 		<div id="edit-picture-dialog" > 
 			<h2 class="title">Edit your picture</h2>
