Added context to images and fonts

--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -250,7 +250,7 @@
         </div>
         <div class="align-right">
           <%= form.submit "Upload", :class => "custom-button" %>
-          <img id="spinner" src="/assets/spinner.gif" class="hidden"/>
+          <img id="spinner" src="/erasmus/assets/spinner.gif" class="hidden"/>
         </div>
         <% end %>
       </div>
@@ -269,7 +269,7 @@
             <button type="submit" class="custom-button primary">
                 Send   <i class="mdi mdi-send"></i> 
             </button>
-            <img id="spinner" src="/assets/spinner.gif" class="hidden"/>
+            <img id="spinner" src="/erasmus/assets/spinner.gif" class="hidden"/>
           </div>
           <% end %>
       </div>
