--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -182,7 +182,7 @@
 					</div>
 					<div class="align-right">
 						<%= form.submit "Upload", :class => "custom-button" %>
-						<img id="spinner" src="/assets/spinner.gif" class="hidden"/>
+						<img id="spinner" src="/erasmus/assets/spinner.gif" class="hidden"/>
 					</div>
 					<% end %>
 				</div>
