--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -56,6 +56,8 @@
 			padding: 15px !important
 			padding-left: 0px !important
 			flex-grow: 1
+			&.hidden
+				display: none
 			.flex-container
 				@include flexBoxVendor
 				align-items: center
