--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -1,6 +1,21 @@
 @import "_variables"
 @import "_mixins"
 
+@media only screen and (max-width: 620px)
+	.filters
+		.flex-filters
+			.filter
+				width: 100%
+				select
+					width: 100%
+			.custom-button
+				width: 100%
+
+@media only screen and (max-width: 1200px)
+	.filters
+		.flex-filters
+			flex-wrap: wrap
+
 .filters
 	background-color: #edf2f6
 	padding: 20px
@@ -8,11 +23,11 @@
 		margin: 0
 	.flex-filters
 		@include flexBoxVendor
-		flex-wrap: wrap
+		// flex-wrap: wrap
 		align-items: center
 		.filter
 			@include flexBoxVendor
-			flex-wrap: wrap
+			flex-wrap: nowrap
 			flex-grow: 1
 			label
 				padding-right: 15px
