--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -49,7 +49,7 @@
         <input name="university" placeholder="Find by name" value="<%=params[:university]%>"/>
       </div>
       <div class="field filter">
-        <label class="label">Progress State </label>
+        <label class="label">Status </label>
         <%= select_tag "progress_state", options_for_select([["Any",""]] + User.progress_statuses.map{|k,v| [k.humanize.capitalize, v]}, params[:progress_state]) %>
         
       </div>
@@ -63,7 +63,7 @@
       </div>-->
 
       <input type="submit" class="custom-button primary" value="Search"/>
-      <input type="button" class="custom-button primary" onclick="location.href='<%= RELATIVE_URL %>/admin_dashboard';" value="Clear filters" />
+      <input type="button" class="custom-button primary" onclick="location.href='<%= RELATIVE_URL %>/admin_dashboard';" value="Clear" />
     </div>
   </form>
 </div>
