--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -63,7 +63,7 @@
       </div>-->
 
       <input type="submit" class="custom-button primary" value="Search"/>
-      <input type="button" class="custom-button primary" onclick="location.href='<%= RELATIVE_URL %>/admin_dashboard';" value="Clear" />
+      <input type="button" class="custom-button" onclick="location.href='<%= RELATIVE_URL %>/admin_dashboard';" value="Clear" />
     </div>
   </form>
 </div>
