--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -29,6 +29,8 @@
 			@include flexBoxVendor
 			flex-wrap: nowrap
 			flex-grow: 1
+			select
+				max-width: 150px
 			label
 				padding-right: 15px
 			input
