--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -74,7 +74,12 @@
 				<p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<div class="align-right">
 					<a download="application_form.pdf" href="<%="#{RELATIVE_URL}/generate_pdf/#{current_user.id}"%>"><button class="custom-button">Download</button></a>
-					<a download="application_form.pdf" href="<%= current_user.signed_student_application_form.url %>"><button class="custom-button primary">Download signed</button></a>
+					<% notSigned = current_user.signed_student_application_form.blank? %>
+					<% if notSigned %>
+						<button class="custom-button primary" disabled >Download signed</button>
+					<% else %>
+						<a download="application_form.pdf" href="<%= current_user.signed_student_application_form.url %>"><button class="custom-button primary" >Download signed</button></a>
+					<% end %>
 					<a href="<%="#{RELATIVE_URL}/review_student_application_form/#{current_user.id}/1"%>"><button class="custom-button" >Review data</button></a>
 
 				</div>
@@ -87,64 +92,64 @@
 			:content => current_user.motivation_letter, 
 			:file_name => current_user.motivation_letter_file_name, 
 			:label => "Motivation Letter" } %>
+		<%= render partial: "users/user_dashboard_panel", :locals => {
+			:admin => true,
+			:name => :curriculum_vitae, 
+			:content => current_user.curriculum_vitae, 
+			:file_name => current_user.curriculum_vitae_file_name, 
+			:label => "Curriculum Vitae"}  %>
+		<%= render partial: "users/user_dashboard_panel", :locals => {
+			:admin => true,
+			:name => :transcript_of_records, 
+			:content => current_user.transcript_of_records, 
+			:file_name => current_user.transcript_of_records_file_name, 
+			:label => "Transcript of Records"}  %>
+		<%= render partial: "users/user_dashboard_panel", :locals => {
+			:admin => true,
+			:name => :learning_agreement, 
+			:content => current_user.learning_agreement, 
+			:file_name => current_user.learning_agreement_file_name, 
+			:label => "Learning Agreement"}  %>
+		<%= render partial: "users/user_dashboard_panel", :locals => {
+			:admin => true,
+			:name => :valid_insurance_policy, 
+			:content => current_user.valid_insurance_policy, 
+			:file_name => current_user.valid_insurance_policy_file_name, 
+			:label => "Valid Insurance Policy"}  %>
+		<%= render partial: "users/user_dashboard_panel", :locals => {
+			:admin => true,
+			:name => :ni_passport, 
+			:content => current_user.ni_passport, 
+			:file_name => current_user.ni_passport_file_name, 
+			:label => "NI Passport"}  %>
+
+		<%if current_user.seeking_degree %>
+		<div id="degree-seeking" class="hidden">
+			<%= render partial: "users/user_dashboard_panel", :locals => {
+			:admin => true,
+			:name => :recommendation_letter_1, 
+			:content => current_user.recommendation_letter_1, 
+			:file_name => current_user.recommendation_letter_1_file_name, 
+			:label => "Recommendation letter 1"}  %>
 			<%= render partial: "users/user_dashboard_panel", :locals => {
 				:admin => true,
-				:name => :curriculum_vitae, 
-				:content => current_user.curriculum_vitae, 
-				:file_name => current_user.curriculum_vitae_file_name, 
-				:label => "Curriculum Vitae"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
-					:admin => true,
-					:name => :transcript_of_records, 
-					:content => current_user.transcript_of_records, 
-					:file_name => current_user.transcript_of_records_file_name, 
-					:label => "Transcript of Records"}  %>
-					<%= render partial: "users/user_dashboard_panel", :locals => {
-						:admin => true,
-						:name => :learning_agreement, 
-						:content => current_user.learning_agreement, 
-						:file_name => current_user.learning_agreement_file_name, 
-						:label => "Learning Agreement"}  %>
-						<%= render partial: "users/user_dashboard_panel", :locals => {
-							:admin => true,
-							:name => :valid_insurance_policy, 
-							:content => current_user.valid_insurance_policy, 
-							:file_name => current_user.valid_insurance_policy_file_name, 
-							:label => "Valid Insurance Policy"}  %>
-							<%= render partial: "users/user_dashboard_panel", :locals => {
-								:admin => true,
-								:name => :ni_passport, 
-								:content => current_user.ni_passport, 
-								:file_name => current_user.ni_passport_file_name, 
-								:label => "NI Passport"}  %>
-
-								<%if current_user.seeking_degree %>
-								<div id="degree-seeking" class="hidden">
-									<%= render partial: "users/user_dashboard_panel", :locals => {
-									:admin => true,
-									:name => :recommendation_letter_1, 
-									:content => current_user.recommendation_letter_1, 
-									:file_name => current_user.recommendation_letter_1_file_name, 
-									:label => "Recommendation letter 1"}  %>
-									<%= render partial: "users/user_dashboard_panel", :locals => {
-										:admin => true,
-										:name => :recommendation_letter_2, 
-										:content => current_user.recommendation_letter_2, 
-										:file_name => current_user.recommendation_letter_2_file_name, 
-										:label => "Recommendation letter 2"}  %>
-									<%= render partial: "users/user_dashboard_panel", :locals => {
-										:admin => true,
-										:name => :official_gpa, 
-										:content => current_user.official_gpa, 
-										:file_name => current_user.official_gpa_file_name, 
-										:label => "Official GPA"}  %>
-									<%= render partial: "users/user_dashboard_panel", :locals => {
-										:admin => true,
-										:name => :english_test_score, 
-										:content => current_user.english_test_score, 
-										:file_name => current_user.english_test_score_file_name,
-										:label => "English Test Score"}  %>
-									</div>
-									<% end %>
-									</div>
-								<%end%>
+				:name => :recommendation_letter_2, 
+				:content => current_user.recommendation_letter_2, 
+				:file_name => current_user.recommendation_letter_2_file_name, 
+				:label => "Recommendation letter 2"}  %>
+			<%= render partial: "users/user_dashboard_panel", :locals => {
+				:admin => true,
+				:name => :official_gpa, 
+				:content => current_user.official_gpa, 
+				:file_name => current_user.official_gpa_file_name, 
+				:label => "Official GPA"}  %>
+			<%= render partial: "users/user_dashboard_panel", :locals => {
+				:admin => true,
+				:name => :english_test_score, 
+				:content => current_user.english_test_score, 
+				:file_name => current_user.english_test_score_file_name,
+				:label => "English Test Score"}  %>
+			</div>
+		<% end %>
+		</div>
+	<%end%>
