--- a/app/views/user_mailer/reviewed_application_mail.html.erb
+++ b/app/views/user_mailer/reviewed_application_mail.html.erb
@@ -459,10 +459,10 @@
 
   <div role="section">
     <div style="background-color: #4b5462;background-position: center;background-size: cover;
-        background-image: url(https://i1.createsend1.com/ei/j/2D/FF9/768/194359/csfinal/csm_746x187_entrada_etsit_d17524d7071.jpg);background-repeat: no-repeat;">
+        background-image: url(https://www.avanzaentucarrera.com/llegaraser/comp/uploads/2014/02/telecomunicaciones.jpg);background-repeat: no-repeat;">
       <div class="layout one-col" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
         <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;">
-          <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" role="presentation"><tr class="layout-full-width" style="background-color: #4b5462;background-position: 0px 0px;background-image: url(https://i1.createsend1.com/ei/j/2D/FF9/768/194359/csfinal/csm_746x187_entrada_etsit_d17524d7071.jpg);background-repeat: no-repeat;"><td class="layout__edges">&nbsp;</td><td style="width: 600px" class="w560"><![endif]-->
+          <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" role="presentation"><tr class="layout-full-width" style="background-color: #4b5462;background-position: 0px 0px;background-image: url(https://www.avanzaentucarrera.com/llegaraser/comp/uploads/2014/02/telecomunicaciones.jpg);background-repeat: no-repeat;"><td class="layout__edges">&nbsp;</td><td style="width: 600px" class="w560"><![endif]-->
           <div class="column" style="max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);text-align: left;color: #8e959c;font-size: 14px;line-height: 21px;font-family: sans-serif;">
 
             <div style="Margin-left: 20px;Margin-right: 20px;">
@@ -471,7 +471,7 @@
 
             <div style="Margin-left: 20px;Margin-right: 20px;">
               <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-                <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>Accepted to ESTIT-UPM</strong></font></span></h1>
+                <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>Accepted to ETSIT-UPM</strong></font></span></h1>
               </div>
             </div>
 
@@ -504,7 +504,7 @@
             <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
               <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
 
-                <span style="color:#18527c"><strong>Hi,  <span style="color:#f7931e"><%= @user.first_name %></span> </strong></span>
+                <span style="color:#18527c"><strong>Hi  <span style="color:#f7931e"><%= @user.first_name %></span>, </strong></span>
               </h2>
               <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
                 First of all we would like to thank you for your interest to study at Escuela Técnica Superior de
