--- a/app/views/layouts/mailer.backup.html.erb
+++ b/app/views/layouts/mailer.backup.html.erb
@@ -8,10 +8,10 @@
     <h1 style="font-size: 30px;">ETSIT-UPM</h1>
     </header>
     <article style=" padding:15px;">
-      <h2>Hi <%= @nominee.email %>,</h2>
+      <h2>Hi,</h2>
       <h3>You have been selected for the ETSIT UPM Erasmus Programme</h3>
       <p>
-        In order to submit your application you must register in the ETSIT Erasmus platform.</p>
+        In order to submit your application you must register in the ETSIT Incoming students platform.</p>
         <p> Follow this link: <a style="color: #4664A2;" href="<%= @nominee_url %>"><%= @nominee_url %></a>.
       </p>
       <p>Thanks for joining and have a great day!</p>
