--- a/app/views/student_application_form/_sixth_step.erb
+++ b/app/views/student_application_form/_sixth_step.erb
@@ -27,7 +27,7 @@
 <div class="field marginleft45">
   <div class="flex-container">
     <%= f.check_box :already_study_abroad, autofocus: true, autocomplete: "already_study_abroad", disabled: review ,:id => "already_study_abroad"%>
-    <%= f.label :already_study_abroad, "Have you studied abroad before?",class: "checkBox" %><br />
+    <%= f.label :already_study_abroad, "I have studied abroad before",class: "checkBox" %><br />
   </div>
 </div>
 <div class="field field50 already_study_abroad_dependent <%= sap.already_study_abroad ? "":"hidden" %>">
