--- a/app/views/user_mailer/reviewed_application_mail.html.erb
+++ b/app/views/user_mailer/reviewed_application_mail.html.erb
@@ -504,7 +504,7 @@
             <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
               <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
 
-                <span style="color:#18527c"><strong>Hi  <span style="color:#f7931e"><%= @user.first_name %></span>, </strong></span>
+                <span style="color:#18527c"><strong>Hi, </strong></span>
               </h2>
               <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
                 First of all we would like to thank you for your interest to study at Escuela Técnica Superior de
