--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -504,7 +504,7 @@ background-image: url(https://www.avanzaentucarrera.com/llegaraser/comp/uploads/
       <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
         <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
 
-        <span style="color:#18527c"><strong>Hi <span style="color:#f7931e"><%= @nominee.email %></span>, </strong></span></h2>
+        <span style="color:#18527c"><strong>Hi, </strong></span></h2>
         <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
          First of all we would like to thank you for your interest to study at Escuela Técnica Superior de
           Ingenieros de Telecomunicación of Universidad Politécnica de Madrid (ETSIT-UPM). We confirm you that we have duly received the e-nomination from your Home University.
@@ -512,13 +512,14 @@ background-image: url(https://www.avanzaentucarrera.com/llegaraser/comp/uploads/
         </h2>
         <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
 
-        <span style="color:#18527c"><strong>In order to submit your application you must register in the ETSIT Erasmus platform. Follow this link: </strong></span>
+        <span style="color:#18527c"><strong>In order to submit your application you must register in the ETSIT Incoming students platform. Follow this link: </strong></span>
         <a style="color: #4664A2;text-decoration: none;" href="<%= @nominee_url %>"><%= @nominee_url %></a>.</h2>
         <br/>
         <br/>
 
         <p class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 12px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-        Keep in mind that the deadline to receive application packages is June, 1st for the fall semester or academic year 2018-19, and December, 1st for the second semester. Please check registered users, documents required in pdf, and application packages before the deadline .
+        Keep in mind that the deadline to receive your application package is <span class="red"><strong>June, 1st</strong></span> for the fall semester or academic year 2019-20, and span class="red"><strong>December, 1st</strong></span> for the second semester of this current academic year 2018-19. For double degree students, the deadline is <span class="red"><strong>May 15th</strong></span>. Please upload the required documents in PDF and your application package before the deadline .
+
         </p>
       </div>
     </div>
