--- a/app/views/student_application_form/_first_step.erb
+++ b/app/views/student_application_form/_first_step.erb
@@ -10,9 +10,7 @@
   <div class="flex-container">
     <%= f.label :academic_year %><br />
     <%= f.select :academic_year, [
-      '2018-2019: Fall Semester',
       '2018-2019: Spring Semester',
-      '2018-2019: Academic Year',
       '2019-2020: Fall Semester',
       '2019-2020: Spring Semester',
       '2019-2020: Academic Year',
@@ -30,6 +28,8 @@
         'Bilateral Agreement',
         'Visiting Student',
         'SICUE/SENECA',
+        'Other'
+
         ],{}, {disabled: review} %>
       </div>
     </div>
@@ -37,7 +37,7 @@
     <div class="field field50">
       <div class="flex-container">
         <%= f.label :field_of_study %><br />
-        <%= f.select :field_of_study, ["Telecommunication","Biotechnology"],{}, {disabled: review} %>
+        <%= f.select :field_of_study, ["Telecommunication Engineering","Biomedical Engineering"],{}, {disabled: review} %>
       </div>
     </div>
 
