--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="align-right">
 
-<a href="mailto:internacional@etsit.upm.es" class="inline"><button class="custom-button primary">OI Contact</button></a>
+<a href="mailto:international@etsit.upm.es" class="inline"><button class="custom-button primary">OI Contact</button></a>
 <%= button_to "Log out", destroy_user_session_path, :method=> :delete, :class => "custom-button ", :form_class => "inline" %>
 </div>
 <% unless current_user.role != 'admin'%>
