--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -518,7 +518,7 @@ background-image: url(https://www.avanzaentucarrera.com/llegaraser/comp/uploads/
         <br/>
 
         <p class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 12px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-        Keep in mind that the deadline to receive your application package is <span class="red"><strong>June, 1st</strong></span> for the fall semester or academic year 2019-20, and span class="red"><strong>December, 1st</strong></span> for the second semester of this current academic year 2018-19. For double degree students, the deadline is <span class="red"><strong>May 15th</strong></span>. Please upload the required documents in PDF and your application package before the deadline .
+        Keep in mind that the deadline to receive your application package is <span class="red"><strong>June, 1st</strong></span> for the fall semester or academic year 2019-20, and <span class="red"><strong>December, 1st</strong></span> for the second semester of this current academic year 2018-19. For double degree students, the deadline is <span class="red"><strong>May 15th</strong></span>. Please upload the required documents in PDF and your application package before the deadline.
 
         </p>
       </div>
