--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -10,9 +10,10 @@
 <h1 class="title"> Hi, <%= current_user.first_name %></h1>
 
 <% if current_user.progress_status == "in_process" %>
-    <p class="intro-paragraph">We remind you that the deadline to receive your application package is <span class="red"><strong>June, 1st</strong></span> for the fall
-      semester or academic year 2018-19 and <span class="red"><strong>December, 1st</strong></span> for the second semester. Please <u>complete your application package before the
-      deadline</u> with the documents required in pdf.</p>
+ 
+		<p class="intro-paragraph">We remind you that the deadline to receive your application package is <span class="red"><strong>June, 1st</strong></span> for the fall
+			 semester or academic year 2019-20 and <span class="red"><strong>December, 1st</strong></span> for the second semester of this current academic year 2018-19. For double degree students, the deadline is <span class="red"><strong>May 15th</strong></span>. Please <u>complete your application package before the deadline</u> with the required documents in PDF.</p>
+
 		<p class="intro-paragraph"><span class="red">(*) Required file or data</span> </p>
 <br/>
 <div class="dashboard-container">
