--- a/app/views/student_application_form/_first_step.erb
+++ b/app/views/student_application_form/_first_step.erb
@@ -42,12 +42,12 @@
     </div>
 
 
-    <div class="field field50">
+    <div class="field">
       <div class="flex-container">
-      <%= f.radio_button :seeking_degree, true, :checked => sap.user.seeking_degree  %>
-      <%= f.label :seeking_degree, "I am seeking double degree", :value => true, class: "checkBox"  %>
-      <%= f.radio_button :seeking_degree, false, :checked => !sap.user.seeking_degree %>
-      <%= f.label :seeking_degree, "I am not seeking double degree", :value => false, class: "checkBox"  %>
+      <%= f.check_box :seeking_degree, :checked => !!sap.user.seeking_degree , disabled: review  %>
+      <%= f.label :seeking_degree, "I am degree seeking student", :value => true, class: "checkBox"  %>
+<!--      <%#= f.radio_button :seeking_degree, false, :checked => !sap.user.seeking_degree %>
+      <%#= f.label :seeking_degree, "I am not seeking double degree", :value => false, class: "checkBox"  %>-->
     </div>
  </div>
   </div>
